# qaguru_17_diploma_ui

./: .gitignore  .pyproject.toml.swp  README.md  conftest.py  pyproject.toml
pages/: authorization_page.py  cart_page.py  erin_recommends_page.py  gear_page.py  home_page.py  men_page.py  new_account_page.py  product_page.py  training_page.py  women_page.py
tests/: conftest.py  test_authorization_with_a_registered_account.py  test_buying_bag.py  test_buying_hoodies_for_men.py  test_buying_sweatshirt_for_women.py  test_category_list_for_women_button.py  test_create_new_account.py  test_link_recommendation_from_Erin_Renny.py  test_site_luma_shop.py
utils/: allure_attach.py  user_data.json  user_date_gen.py
